--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pakey/tool",
-    "description": "pakey的包",
+    "description": "pakey自用常用工具包",
     "license": "MIT",
     "authors": [
         {
@@ -10,5 +10,5 @@
     ],
     "require": {
         "php":">=5.5.0",
-    },
+    }
 }
