--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "pakey@qq.com"
         }
     ],
-    "require": {
-        "php":">=5.5.0"
+    "autoload": {
+        "psr-4": {
+            "pakey\\": "src/"
+        }
     }
 }
